--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^3.9.0"
   },
   "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^2.3.5",
     "postcss-import": "^12.0.1",
     "postcss-import-resolver": "^2.0.0",
     "postcss-nested": "^4.2.1",
