--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "react-slick": "^0.26.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.3.5",
