--- a/package.json
+++ b/package.json
@@ -15,20 +15,16 @@
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-smoothscroll": "^1.1.0",
+    "gatsby-source-datocms": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-sharp": "^2.3.14",
-    "gsap": "^3.3.4",
     "locomotive-scroll": "^3.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.9.0",
-    "react-slick": "^0.26.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "smooth-scroll": "^16.1.3",
-    "styled-components": "^5.1.1"
+    "react-moment": "^0.9.7",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.3.5",
