--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gatsby-source-datocms": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-sharp": "^2.3.14",
+    "gsap": "^3.3.4",
     "locomotive-scroll": "^3.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
