--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Sam Goddard <hello@samgoddard.co.uk>",
   "dependencies": {
     "embla-carousel-react": "^2.0.3",
+    "flickity": "^2.2.1",
     "framer-motion": "^1.8.4",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.40",
