--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "Sam Goddard <hello@samgoddard.co.uk>",
   "dependencies": {
-    "embla-carousel-react": "^2.0.3",
     "flickity": "^2.2.1",
     "framer-motion": "^1.8.4",
     "gatsby": "^2.19.7",
@@ -22,16 +21,13 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "gsap": "^3.3.4",
     "locomotive-scroll": "^3.5.4",
-    "marquee3000": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
-    "react-multi-carousel": "^2.5.5",
-    "resize-observer-polyfill": "^1.5.1",
-    "tiny-slider-react": "^0.4.0"
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.3.5",
