--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "gsap": "^3.3.4",
     "locomotive-scroll": "^3.5.4",
+    "normalize-wheel": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "wheel": "^1.0.0"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.3.5",
