--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.13.1",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
