--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
+    "react-player": "^2.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "wheel": "^1.0.0"
   },
