--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
     "react-player": "^2.5.0",
+    "react-tabs": "^3.1.1",
     "resize-observer-polyfill": "^1.5.1",
     "wheel": "^1.0.0"
   },
