--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Sam Goddard <hello@samgoddard.co.uk>",
   "dependencies": {
+    "core-js": "^3.6.5",
     "flickity": "^2.2.1",
     "framer-motion": "^1.8.4",
     "gatsby": "^2.23.17",
