--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "locomotive-scroll": "^3.5.4",
     "micromodal": "^0.4.6",
     "normalize-wheel": "^1.0.1",
+    "postcss-100vh-fix": "^0.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.13.1",
