--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.2.40",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-google-gtag": "^3.12.0",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.0.34",
     "gatsby-plugin-polyfill-io": "^1.1.0",
